exports[`Title should render 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontFamily": "Brandon Text_medium",
          "fontSize": 20,
          "fontWeight": "400"
        },
        undefined,
        Object {}
      ]
    ]
  }>
  Title
</Text>
`;

exports[`Title should support style overriding 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center"
      },
      Array [
        Object {
          "fontFamily": "Brandon Text_medium",
          "fontSize": 20,
          "fontWeight": "400"
        },
        undefined,
        Object {
          "color": "#222"
        }
      ]
    ]
  }>
  Title with style
</Text>
`;

exports[`Title should support theming 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#000"
    }
  }>
  <Text
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          },
          Object {
            "color": "#fff"
          },
          Object {}
        ]
      ]
    }>
    Title with theme
  </Text>
</View>
`;
